--- a/frontend/src/app/contract-detail/contract-detail.component.scss
+++ b/frontend/src/app/contract-detail/contract-detail.component.scss
@@ -3,6 +3,10 @@ h1, h2 {
     margin-bottom: 1rem;
 }
 
+td {
+    text-align: left;
+}
+
 .selectable {
     margin: 0.5rem;
     padding: 0.5rem;
@@ -29,8 +33,8 @@ h1, h2 {
     border-radius: 0.5rem;
     box-shadow: 1rem 1rem 2rem black;;
     text-align: center;
-    min-width: 30vw;
-    max-width: calc(100vw - 3rem);
+    min-width: 80vw;
+    width: calc(100vw - 3rem);
     min-height: 50vh;
     max-height: 100vh;
     padding: 1rem;
@@ -40,6 +44,10 @@ h1, h2 {
 .side-by-side {
     display: flex;
     flex-direction: row;
+}
+
+.no-wrap {
+    white-space: nowrap;
 }
 
 // table tbody, table thead{
