--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -10,18 +10,23 @@
 
 <ng-container *ngIf="show !== 'nothing'">
     <div class="backdrop" (click)="show = 'nothing'"></div>
-    <div class="overlay" *ngIf="show === 'names'">
+    <div class="overlay extended" *ngIf="show === 'names'">
+        <div class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</div>
         <div>
             <h1>
                 {{contract.name}}
             </h1>
-            <p>
+            <p class="center">
                 {{contract.description}}
+            </p>
+            <p>
+                Diese Ansicht erlaubt die Pr&uuml;fung der sachlichen Richtigkeit einer Rechnung. Sie k&ouml;nnen die Ansicht nach Datum oder nach
+                Person sortieren, oder die Daten f&uuml;r den Monat nach Excel exportieren.
             </p>
             <div class="side-by-side">
                 <div class="card">
-                    Monat:
-                    <select [(ngModel)]="selectedMonth" class="selectable">
+                    Leistungszeitraum:
+                    <select [(ngModel)]="selectedMonth" class="selectable" style="min-width: 6rem;">
                         <option *ngFor="let month of allowedMonths" [value]="month">
                             {{month}}
                         </option>
@@ -66,7 +71,7 @@
                     <td *ngIf="keysPresent" class="no-wrap">
                         {{row.key}}
                     </td>
-                    <td>
+                    <td style="white-space: pre-line;">
                         {{row.text}}
                     </td>
                 </tr>
@@ -75,32 +80,42 @@
     </div>
     <div class="overlay" *ngIf="show === 'numbers'">
         <div>
+            <div class="upper-right-corner selectable card" style="width: unset;" (click)="show = 'nothing'">Schließen</div>
             <h1>
                 {{contract.name}}
             </h1>
-            <p>
+            <p class="center">
                 {{contract.description}}
+            </p>
+            <p>
+                Diese Ansicht erlaubt die Pr&uuml;fung der rechnerischen Richtigkeit einer Rechnung. Sind die angezeigten Summen identisch
+                mit den Summen der Rechnung, wurde durch einen zweiten Rechnungsweg gepr&uuml;ft, dass die Rechnung rechnerisch richtig ist.
+            </p>
+            <p>
+                Voraussetzung ist, dass vorher die Eintr&auml;ge sachlich gepr&uuml;ft und ggf. nicht zutreffende Eintr&auml;ge entfernt wurden.
             </p>
             <div class="side-by-side">
                 <div class="card">
-                    Monat:
-                    <select [(ngModel)]="selectedMonth" class="selectable">
+                    Leistungszeitraum:
+                    <select [(ngModel)]="selectedMonth" class="selectable" style="min-width: 6rem;">
                         <option *ngFor="let month of allowedMonths" [value]="month">
                             {{month}}
                         </option>
                     </select>
                 </div>
                 <div>
-                    <div class="card selectable" (click)="exportNumbers()">Monat nach Excel exportieren</div>
+                    <div class="card selectable" (click)="exportNumbers()">Zeitraum nach Excel exportieren</div>
                 </div>
                 <div>
-                    <div class="card selectable" (click)="exportAllNumbers()">Alles nach Excel exportieren</div>
+                    <div class="card selectable" (click)="exportAllNumbers()">Alle Daten nach Excel exportieren</div>
                 </div>
             </div>
-            <table>
+            <table class="center">
                 <thead>
                     <tr>
                         <th>Preiskategorie</th>
+                        <th>PT</th>
+                        <th>Stunden</th>
                         <th>Kosten</th>
                     </tr>
                 </thead>
@@ -109,33 +124,45 @@
                         <td>
                             {{entry[0]}}
                         </td>
-                        <td style="text-align: right;">
-                            {{entry[1] | number: '1.2-2':'de'}} &#8364;
+                        <td class="right">
+                            {{entry[1].days | number: '1.3-3':'de'}}
+                        </td>
+                        <td class="right">
+                            {{entry[1].days * 8 | number: '1.2-2':'de'}}
+                        </td>
+                        <td class="right">
+                            {{entry[1].price | number: '1.2-2':'de'}} &#8364;
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <b>Summe (netto)</b>
                         </td>
-                        <td style="text-align: right;">
+                        <td class="right">
+                            {{sumDays | number: '1.3-3':'de'}}
+                        </td>
+                        <td class="right">
+                            {{sumDays * 8 | number: '1.2-2':'de'}}
+                        </td>
+                        <td class="right">
                             {{sum | number: '1.2-2':'de'}} &#8364;
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td colspan="3">
                             MWSt
-                            <input type="number" required="true" [(ngModel)]="taxRate" style="text-align: right;">
+                            <input type="number" required="true" [(ngModel)]="taxRate" class="right">
                             %
                         </td>
-                        <td style="text-align: right;">
+                        <td class="right">
                             {{tax | number: '1.2-2':'de'}} &#8364;
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td colspan="3">
                             <b>Summe (brutto)</b>
                         </td>
-                        <td style="text-align: right;">
+                        <td class="right">
                             <b>{{(sum + tax) | number: '1.2-2':'de'}} &#8364;</b>
                         </td>
                     </tr>
