--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,13 +10,13 @@
     <div class="card-container">
       <div>BOAT3-Benutzername:</div>
       <div>
-        <input type="text" class="selectable" [(ngModel)]="username">
+        <input type="text" class="selectable" [(ngModel)]="username" (keydown.enter)="passwd.focus()">
       </div>
     </div>
     <div class="card-container">
       <div>Kennwort:</div>
       <div>
-        <input type="password" class="selectable" [(ngModel)]="password" (keydown.enter)="login()">
+        <input #passwd type="password" class="selectable" [(ngModel)]="password" (keydown.enter)="login()">
       </div>
     </div>
     <div class="card-container">
