added degree of capacity utilization view and removed useless busy component

--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -185,40 +185,82 @@
                     <td rowspan="2">Element</td>
                     <td colspan="3" class="center">Finanzen</td>
                     <td colspan="3" class="center">Personentage</td>
-                    <td rowspan="2">Auslastung</td>
+                    <td>Auslastung</td>
                 </tr>
                 <tr>
                     <td>Obergrenze</td>
                     <td>Verbraucht</td>
                     <td>Verf&uuml;gbar</td>
-                    <td>Obergrenze PT</td>
+                    <td class="no-wrap">Obergrenze PT</td>
                     <td>Verbraucht</td>
                     <td>Verf&uuml;gbar</td>
+                    <td class="no-wrap rel">
+                        Zeit:
+                        {{partOfTime | number: '1.1-1':'de'}} %
+                        <div class="gauge"
+                            style="background-color: turquoise"
+                            [ngStyle]="{width: (partOfTime | number:'1.0-0') + '%'}">
+                        </div>
+                    </td>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Summe</td>
+                <tr *ngFor="let detail of contract.budgetDetails">
                     <td class="no-wrap">
+                        {{detail.priceCategory}}
+                    </td>
+                    <td class="no-wrap right">
+                        {{detail.availableFinances | number: '1.2-2':'de'}} &#8364;
+                    </td>
+                    <td class="no-wrap right">
+                        {{getTotalForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}} &#8364;
+                    </td>
+                    <td class="no-wrap right">
+                        {{detail.availableFinances - getTotalForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}} &#8364;
+                    </td>
+                    <td class="no-wrap right">
+                        {{detail.availableUnits | number: '1.2-2':'de'}}
+                    </td>
+                    <td class="no-wrap right">
+                        {{getDaysForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}}
+                    </td>
+                    <td class="no-wrap right">
+                        {{detail.availableUnits - getDaysForPriceCategory(detail.priceCategoryId) | number: '1.2-2':'de'}}
+                    </td>
+                    <td class="no-wrap right rel">
+                        {{detail.availableFinances === 0 ? '-' : getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances * 100 | number: '1.1-1':'de'}} %
+                        <div class="gauge"
+                            [ngClass]="{red: 100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances > partOfTime}"
+                            [ngStyle]="{width: (100 * getTotalForPriceCategory(detail.priceCategoryId) / detail.availableFinances | number:'1.0-0') + '%'}">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><b>Summe</b></td>
+                    <td class="no-wrap right">
                         {{contract.completeBudget.availableFinances | number: '1.2-2':'de'}} &#8364;
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right">
                         {{totalSum | number: '1.2-2':'de'}} &#8364;
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right">
                         {{contract.completeBudget.availableFinances - totalSum | number: '1.2-2':'de'}} &#8364;
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right">
                         {{contract.completeBudget.availableUnits | number: '1.2-2':'de'}}
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right">
                         {{totalDays | number: '1.2-2':'de'}}
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right">
                         {{contract.completeBudget.availableUnits - totalDays | number: '1.2-2':'de'}}
                     </td>
-                    <td class="no-wrap">
+                    <td class="no-wrap right rel">
                         {{totalSum / contract.completeBudget.availableFinances * 100 | number: '1.1-1':'de'}} %
+                        <div class="gauge"
+                            [ngClass]="{red: 100 * totalSum / contract.completeBudget.availableFinances > partOfTime}"
+                            [ngStyle]="{width: (100 * totalSum / contract.completeBudget.availableFinances | number:'1.0-0') + '%'}">
+                        </div>
                     </td>
                 </tr>
             </tbody>
