tweaked and cleaned up a bit

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <span>BOAT</span>
-  <span>BOAT3 Importer</span>
+  <span>BOAT3 Erweiterungen</span>
   <div class="spacer"></div>
   <div>{{authenticatedUser}}</div>
 </div>
@@ -8,7 +8,7 @@
 <div class="content" role="main">
   <ng-container *ngIf="!authenticated">
     <div class="card-container">
-      <div>BOAT3-Benutzername:</div>
+      <div tooltip="Dieses Werkzeug greift auf Daten aus BOAT zu. Sie melden sich daher mit ihrem Kennwort aus BOAT auch hier an.">BOAT-Benutzername:</div>
       <div>
         <input type="text" class="selectable" [(ngModel)]="username" (keydown.enter)="passwd.focus()">
       </div>
