--- a/frontend/src/app/contract-list/contract-list.component.html
+++ b/frontend/src/app/contract-list/contract-list.component.html
@@ -1,5 +1,4 @@
 <div class="card-container">
-    <p>W&auml;hlen Sie einen Vertrag aus, um weitere Aktionen daf&uuml;r zu erhalten.</p>
     <div class="card"
         *ngFor="let contract of contracts"
         [ngClass]="{highlighted: contract === selectedContract, selectable: contract !== selectedContract}"
@@ -13,9 +12,20 @@
                 {{contract.description}}
             </div>
             <div>
-                <b>Verantwortlich</b>: {{contract.responsiblePerson}}
+                <b>Verantwortlich</b>: {{contract.responsiblePerson}} ({{contract.organizationalUnit}})
             </div>
+            <ng-container *ngIf="contract === selectedContract">
+                <div>
+                    <b>Beginn</b>: {{contract.start.toLocaleDateString()}},
+                    <b>Ende</b>: {{contract.end.toLocaleDateString()}}
+                </div>
+                <div>
+                    <b>Budget</b>: {{contract.completeBudget.availableFinances | number: '1.2-2':'de'}} &#8364;,
+                    {{contract.completeBudget.availableUnits | number: '1.3-3':'de'}} PT
+                </div>
+            </ng-container>
         </div>
         <app-contract-detail [contract]="contract" *ngIf="contract === selectedContract" class="operations"></app-contract-detail>
     </div>
 </div>
+<p *ngIf="!selectedContract" style="margin-left: 1rem;">W&auml;hlen Sie einen Vertrag aus, um weitere Aktionen daf&uuml;r zu erhalten.</p>
