corrected error handling

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -31,7 +31,7 @@
   </ng-container>
   <!-- Footer -->
   <footer>
-    <p *ngIf="error" class="error">
+    <p *ngIf="error !== ''" class="error">
       {{error}}
     </p>
   </footer>
