--- a/frontend/src/app/contract-detail/contract-detail.component.scss
+++ b/frontend/src/app/contract-detail/contract-detail.component.scss
@@ -35,6 +35,19 @@ table {
     z-index: 10;
 }
 
+.status-button {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-color: green;
+    padding: 0;
+    margin: 0 0.5rem 0 0;
+
+    &.red {
+        background-color: red;
+    }
+}
+
 .overlay {
     position: fixed;
     z-index: 20;
