fixed build error on aria-label

--- a/frontend/src/app/contract-detail/contract-detail.component.html
+++ b/frontend/src/app/contract-detail/contract-detail.component.html
@@ -87,7 +87,7 @@
                         <div role="img"
                             class="status-button selectable"
                             [ngClass]="{red: row.rejected}"
-                            [aria-label]="row.rejected ? 'Zur&uuml;ckgewiesen' : 'Akzeptiert'"
+                            [attr.aria-label]="row.rejected ? 'Zur&uuml;ckgewiesen' : 'Akzeptiert'"
                             (click)="row.rejected = !row.rejected"></div>
                         {{row.text}}
                     </td>
