--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -137,6 +137,30 @@ $dark-blue: darken($main-blue, 20%);
     margin-left: 60px;
   }
 
+  .busy {
+    position: fixed;
+    z-index: 150;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: $light-blue;
+    border-radius: 0.5rem;
+    box-shadow: 1rem 1rem 2rem black;
+    padding: 2rem;
+    text-align: center;
+  }
+
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 140;
+    display: block;
+  }
+  
   a,
   a:visited,
   a:hover {
